Fix widget title alignment

--- a/src/assets/scss/components/_widget-associations.scss
+++ b/src/assets/scss/components/_widget-associations.scss
@@ -23,6 +23,8 @@
 	}
 
 	h6 {
+		display: flex;
+		align-items: flex-end;
 		margin-bottom: 0;
 		padding-right: 15px;
 		font-weight: 700;
@@ -30,10 +32,10 @@
 	}
 
 	h6 strong {
-		display: inline-block;
-		vertical-align: middle;
+		line-height: 1;
 		font-size: 28px;
 		font-weight: 400;
+		margin-right: 10px;
 	}
 
 	a {
